Introducing [GET] /api/guests/{guestId} endpoint.
